// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "@scope/package-1/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "@scope/package-1/index.md"
  },
  {
    "title": "package-1b",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-1b/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-2/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "package-2/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-2/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-2/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "kind": 2,
    "children": [
      {
        "title": "index",
        "kind": 2,
        "path": "@scope/package-3/index/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "kind": 256,
                "path": "@scope/package-3/index/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "kind": 2,
        "path": "@scope/package-3/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "@scope/package-3/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "@scope/package-3/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "@scope/package-3/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "@scope/package-3/index.md"
  },
  {
    "title": "package-4",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-4/index.md"
  },
  {
    "title": "package-5",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-5/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-5/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-6/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-6/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-6.md"
  },
  {
    "title": "package-7",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-7/module-1/index.md",
        "children": [
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "kind": 128,
                "path": "package-7/module-1/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "kind": 128,
                "path": "package-7/module-1/classes/ClassB.md"
              }
            ]
          },
          {
            "title": "submodules",
            "children": [
              {
                "title": "submodule-3-with-modules",
                "children": [
                  {
                    "title": "nested-submodule-1",
                    "kind": 2,
                    "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/index.md",
                    "children": [
                      {
                        "title": "Classes",
                        "children": [
                          {
                            "title": "ClassA",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md"
                          },
                          {
                            "title": "ClassB",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md"
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "title": "nested-submodule-2",
                    "kind": 2,
                    "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/index.md",
                    "children": [
                      {
                        "title": "Classes",
                        "children": [
                          {
                            "title": "ClassA",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md"
                          },
                          {
                            "title": "ClassB",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md"
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-7/module-2/index.md",
        "children": [
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "kind": 128,
                "path": "package-7/module-2/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "kind": 128,
                "path": "package-7/module-2/classes/ClassB.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-7/index.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-1/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-1/README.md"
  },
  {
    "title": "package-1b",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-1b/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-1b/README.md"
  },
  {
    "title": "package-2",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-2/module-1/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "package-2/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-2/module-2/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-2/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-2/README.md"
  },
  {
    "title": "@scope/package-3",
    "kind": 2,
    "children": [
      {
        "title": "index",
        "kind": 2,
        "path": "package-3/index/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "kind": 256,
                "path": "package-3/index/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-3/module-1/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "package-3/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-3/module-2/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-3/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-3/README.md"
  },
  {
    "title": "package-4",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-4/README.md"
  },
  {
    "title": "package-5",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-5/module2/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-5/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-6/module2/README.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-6/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-6.md"
  },
  {
    "title": "package-7",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-7/module-1/README.md",
        "children": [
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "kind": 128,
                "path": "package-7/module-1/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "kind": 128,
                "path": "package-7/module-1/classes/ClassB.md"
              }
            ]
          },
          {
            "title": "submodules",
            "children": [
              {
                "title": "submodule-3-with-modules",
                "children": [
                  {
                    "title": "nested-submodule-1",
                    "kind": 2,
                    "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/README.md",
                    "children": [
                      {
                        "title": "Classes",
                        "children": [
                          {
                            "title": "ClassA",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md"
                          },
                          {
                            "title": "ClassB",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md"
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "title": "nested-submodule-2",
                    "kind": 2,
                    "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/README.md",
                    "children": [
                      {
                        "title": "Classes",
                        "children": [
                          {
                            "title": "ClassA",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md"
                          },
                          {
                            "title": "ClassB",
                            "kind": 128,
                            "path": "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md"
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-7/module-2/README.md",
        "children": [
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "kind": 128,
                "path": "package-7/module-2/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "kind": 128,
                "path": "package-7/module-2/classes/ClassB.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-7/README.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "kind": 2,
    "children": [
      {
        "title": "Globals",
        "path": "@scope/package-1/globals.md",
        "kind": 2
      }
    ],
    "path": "@scope/package-1/index.md"
  },
  {
    "title": "package-1b",
    "kind": 2,
    "children": [],
    "path": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-2/module-1.md"
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-2/module-2.md"
      }
    ],
    "path": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "kind": 2,
    "children": [
      {
        "title": "index",
        "kind": 2,
        "path": "@scope/package-3/module_index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "kind": 256,
                "path": "@scope/package-3/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "kind": 2,
        "path": "@scope/package-3/module-1.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "@scope/package-3/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "@scope/package-3/module-2.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "@scope/package-3/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "@scope/package-3/index.md"
  },
  {
    "title": "package-4",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-4/index.md"
  },
  {
    "title": "package-5",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-5/module2.md"
      }
    ],
    "path": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-6/module2.md"
      }
    ],
    "path": "package-6.md"
  },
  {
    "title": "package-7",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-7/module-1.md"
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-7/module-2.md"
      }
    ],
    "path": "package-7/index.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "kind": 2,
    "children": [],
    "path": "package-1/README.md"
  },
  {
    "title": "package-1b",
    "kind": 2,
    "children": [],
    "path": "package-1b/README.md"
  },
  {
    "title": "package-2",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-2/module-1.md"
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-2/module-2.md"
      }
    ],
    "path": "package-2/README.md"
  },
  {
    "title": "@scope/package-3",
    "kind": 2,
    "children": [
      {
        "title": "index",
        "kind": 2,
        "path": "package-3/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "kind": 256,
                "path": "package-3/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-3/module-1.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "kind": 256,
                "path": "package-3/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-3/module-2.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "kind": 256,
                "path": "package-3/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "path": "package-3/README.md"
  },
  {
    "title": "package-4",
    "kind": 2,
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "kind": 256,
            "path": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "path": "package-4/README.md"
  },
  {
    "title": "package-5",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-5/module2.md"
      }
    ],
    "path": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "kind": 2,
    "children": [
      {
        "title": "module2",
        "kind": 2,
        "path": "package-6/module2.md"
      }
    ],
    "path": "package-6.md"
  },
  {
    "title": "package-7",
    "kind": 2,
    "children": [
      {
        "title": "module-1",
        "kind": 2,
        "path": "package-7/module-1.md"
      },
      {
        "title": "module-2",
        "kind": 2,
        "path": "package-7/module-2.md"
      }
    ],
    "path": "package-7/README.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "kind": 2,
    "path": "@scope/module-1/README.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "kind": 128,
            "path": "@scope/module-1/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2/README.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "kind": 128,
            "path": "module-2/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "kind": 2,
    "path": "module-1/index.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "kind": 128,
            "path": "module-1/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2/index.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "kind": 128,
            "path": "module-2/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "kind": 2,
    "path": "@scope/module-1.mdx"
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2.mdx"
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "kind": 2,
    "path": "module-1.mdx"
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2.mdx"
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "kind": 2,
    "path": "namespace/README.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "namespace/enumerations/EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "namespace/enumerations/EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "namespace/classes/ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "namespace/classes/ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "namespace/interfaces/InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "namespace/interfaces/InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "namespace/type-aliases/TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "namespace/type-aliases/TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-1",
            "kind": 2,
            "path": "module-1/submodules/submodule-1/README.md",
            "children": [
              {
                "title": "Enumerations",
                "children": [
                  {
                    "title": "EnumA",
                    "kind": 8,
                    "path": "module-1/submodules/submodule-1/enumerations/EnumA.md"
                  },
                  {
                    "title": "EnumB",
                    "kind": 8,
                    "path": "module-1/submodules/submodule-1/enumerations/EnumB.md"
                  }
                ]
              },
              {
                "title": "Classes",
                "children": [
                  {
                    "title": "ClassA",
                    "kind": 128,
                    "path": "module-1/submodules/submodule-1/classes/ClassA.md"
                  },
                  {
                    "title": "ClassB",
                    "kind": 128,
                    "path": "module-1/submodules/submodule-1/classes/ClassB.md"
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "InterfaceA",
                    "kind": 256,
                    "path": "module-1/submodules/submodule-1/interfaces/InterfaceA.md"
                  },
                  {
                    "title": "InterfaceB",
                    "kind": 256,
                    "path": "module-1/submodules/submodule-1/interfaces/InterfaceB.md"
                  }
                ]
              },
              {
                "title": "Type Aliases",
                "children": [
                  {
                    "title": "TypeA",
                    "kind": 2097152,
                    "path": "module-1/submodules/submodule-1/type-aliases/TypeA.md"
                  },
                  {
                    "title": "TypeB",
                    "kind": 2097152,
                    "path": "module-1/submodules/submodule-1/type-aliases/TypeB.md"
                  }
                ]
              }
            ]
          },
          {
            "title": "submodule-2",
            "kind": 2,
            "path": "module-1/submodules/submodule-2/README.md",
            "children": [
              {
                "title": "Enumerations",
                "children": [
                  {
                    "title": "EnumA",
                    "kind": 8,
                    "path": "module-1/submodules/submodule-2/enumerations/EnumA.md"
                  },
                  {
                    "title": "EnumB",
                    "kind": 8,
                    "path": "module-1/submodules/submodule-2/enumerations/EnumB.md"
                  }
                ]
              },
              {
                "title": "Classes",
                "children": [
                  {
                    "title": "ClassA",
                    "kind": 128,
                    "path": "module-1/submodules/submodule-2/classes/ClassA.md"
                  },
                  {
                    "title": "ClassB",
                    "kind": 128,
                    "path": "module-1/submodules/submodule-2/classes/ClassB.md"
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "InterfaceA",
                    "kind": 256,
                    "path": "module-1/submodules/submodule-2/interfaces/InterfaceA.md"
                  },
                  {
                    "title": "InterfaceB",
                    "kind": 256,
                    "path": "module-1/submodules/submodule-2/interfaces/InterfaceB.md"
                  }
                ]
              },
              {
                "title": "Type Aliases",
                "children": [
                  {
                    "title": "TypeA",
                    "kind": 2097152,
                    "path": "module-1/submodules/submodule-2/type-aliases/TypeA.md"
                  },
                  {
                    "title": "TypeB",
                    "kind": 2097152,
                    "path": "module-1/submodules/submodule-2/type-aliases/TypeB.md"
                  }
                ]
              }
            ]
          },
          {
            "title": "submodule-3-with-modules",
            "children": [
              {
                "title": "nested-submodule-1",
                "kind": 2,
                "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/README.md",
                "children": [
                  {
                    "title": "Enumerations",
                    "children": [
                      {
                        "title": "EnumA",
                        "kind": 8,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/enumerations/EnumA.md"
                      },
                      {
                        "title": "EnumB",
                        "kind": 8,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/enumerations/EnumB.md"
                      }
                    ]
                  },
                  {
                    "title": "Classes",
                    "children": [
                      {
                        "title": "ClassA",
                        "kind": 128,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md"
                      },
                      {
                        "title": "ClassB",
                        "kind": 128,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md"
                      }
                    ]
                  },
                  {
                    "title": "Interfaces",
                    "children": [
                      {
                        "title": "InterfaceA",
                        "kind": 256,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/interfaces/InterfaceA.md"
                      },
                      {
                        "title": "InterfaceB",
                        "kind": 256,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/interfaces/InterfaceB.md"
                      }
                    ]
                  },
                  {
                    "title": "Type Aliases",
                    "children": [
                      {
                        "title": "TypeA",
                        "kind": 2097152,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/type-aliases/TypeA.md"
                      },
                      {
                        "title": "TypeB",
                        "kind": 2097152,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1/type-aliases/TypeB.md"
                      }
                    ]
                  }
                ]
              },
              {
                "title": "nested-submodule-2",
                "kind": 2,
                "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/README.md",
                "children": [
                  {
                    "title": "Enumerations",
                    "children": [
                      {
                        "title": "EnumA",
                        "kind": 8,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/enumerations/EnumA.md"
                      },
                      {
                        "title": "EnumB",
                        "kind": 8,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/enumerations/EnumB.md"
                      }
                    ]
                  },
                  {
                    "title": "Classes",
                    "children": [
                      {
                        "title": "ClassA",
                        "kind": 128,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md"
                      },
                      {
                        "title": "ClassB",
                        "kind": 128,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md"
                      }
                    ]
                  },
                  {
                    "title": "Interfaces",
                    "children": [
                      {
                        "title": "InterfaceA",
                        "kind": 256,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/interfaces/InterfaceA.md"
                      },
                      {
                        "title": "InterfaceB",
                        "kind": 256,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/interfaces/InterfaceB.md"
                      }
                    ]
                  },
                  {
                    "title": "Type Aliases",
                    "children": [
                      {
                        "title": "TypeA",
                        "kind": 2097152,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/type-aliases/TypeA.md"
                      },
                      {
                        "title": "TypeB",
                        "kind": 2097152,
                        "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2/type-aliases/TypeB.md"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2/README.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-2/enumerations/EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-2/enumerations/EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-2/classes/ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-2/classes/ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-2/interfaces/InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-2/interfaces/InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-2/type-aliases/TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-2/type-aliases/TypeB.md"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "kind": 2,
    "path": "@scope.namespace.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "@scope.namespace.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "@scope.namespace.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "@scope.namespace.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "@scope.namespace.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "@scope.namespace.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "@scope.namespace.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "@scope.namespace.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "@scope.namespace.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1/submodules/submodule-1",
    "kind": 2,
    "path": "module-1.submodules.submodule-1.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-1.submodules.submodule-1.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-1.submodules.submodule-1.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-1.submodules.submodule-1.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-1.submodules.submodule-1.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-1.submodules.submodule-1.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-1.submodules.submodule-1.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-1.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-1.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1/submodules/submodule-2",
    "kind": 2,
    "path": "module-1.submodules.submodule-2.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-1.submodules.submodule-2.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-1.submodules.submodule-2.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-1.submodules.submodule-2.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-1.submodules.submodule-2.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-1.submodules.submodule-2.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-1.submodules.submodule-2.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-2.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-2.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1/submodules/submodule-3-with-modules/nested-submodule-1",
    "kind": 2,
    "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1/submodules/submodule-3-with-modules/nested-submodule-2",
    "kind": 2,
    "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "module-2.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "module-2.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "module-2.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "module-2.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "module-2.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "module-2.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "kind": 2097152,
            "path": "module-2.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "kind": 2097152,
            "path": "module-2.Type.TypeB.md"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "kind": 2,
    "path": "namespace.md"
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-1",
            "kind": 2,
            "path": "module-1/submodules/submodule-1.md"
          },
          {
            "title": "submodule-2",
            "kind": 2,
            "path": "module-1/submodules/submodule-2.md"
          },
          {
            "title": "submodule-3-with-modules",
            "children": [
              {
                "title": "nested-submodule-1",
                "kind": 2,
                "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-1.md"
              },
              {
                "title": "nested-submodule-2",
                "kind": 2,
                "path": "module-1/submodules/submodule-3-with-modules/nested-submodule-2.md"
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "kind": 2,
    "path": "@scope.namespace.md"
  },
  {
    "title": "module-1/submodules/submodule-1",
    "kind": 2,
    "path": "module-1.submodules.submodule-1.md"
  },
  {
    "title": "module-1/submodules/submodule-2",
    "kind": 2,
    "path": "module-1.submodules.submodule-2.md"
  },
  {
    "title": "module-1/submodules/submodule-3-with-modules/nested-submodule-1",
    "kind": 2,
    "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-1.md"
  },
  {
    "title": "module-1/submodules/submodule-3-with-modules/nested-submodule-2",
    "kind": 2,
    "path": "module-1.submodules.submodule-3-with-modules.nested-submodule-2.md"
  },
  {
    "title": "module-2",
    "kind": 2,
    "path": "module-2.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "42-module-name",
    "kind": 2,
    "path": "42-module-name/index.md"
  },
  {
    "title": "<internal>",
    "kind": 2,
    "path": "-internal-/index.md"
  },
  {
    "title": "basic",
    "kind": 2,
    "path": "basic/index.md",
    "children": [
      {
        "title": "EnumA",
        "kind": 8,
        "path": "basic/enumerations/EnumA.md"
      },
      {
        "title": "EnumB",
        "kind": 8,
        "path": "basic/enumerations/EnumB.md"
      },
      {
        "title": "ClassA",
        "kind": 128,
        "path": "basic/classes/ClassA.md"
      },
      {
        "title": "ClassB",
        "kind": 128,
        "path": "basic/classes/ClassB.md"
      },
      {
        "title": "InterfaceA",
        "kind": 256,
        "path": "basic/interfaces/InterfaceA.md"
      },
      {
        "title": "InterfaceB",
        "kind": 256,
        "path": "basic/interfaces/InterfaceB.md"
      },
      {
        "title": "TypeA",
        "kind": 2097152,
        "path": "basic/type-aliases/TypeA.md"
      },
      {
        "title": "TypeB",
        "kind": 2097152,
        "path": "basic/type-aliases/TypeB.md"
      }
    ]
  },
  {
    "title": "has-categories",
    "kind": 2,
    "path": "has-categories/index.md",
    "children": [
      {
        "title": "CategoryAEnum1",
        "kind": 8,
        "path": "has-categories/enumerations/CategoryAEnum1.md"
      },
      {
        "title": "CategoryAEnum2",
        "kind": 8,
        "path": "has-categories/enumerations/CategoryAEnum2.md"
      },
      {
        "title": "CategoryBEnum1",
        "kind": 8,
        "path": "has-categories/enumerations/CategoryBEnum1.md"
      },
      {
        "title": "CategoryBEnum2",
        "kind": 8,
        "path": "has-categories/enumerations/CategoryBEnum2.md"
      },
      {
        "title": "UnCategorizedEnum",
        "kind": 8,
        "path": "has-categories/enumerations/UnCategorizedEnum.md"
      },
      {
        "title": "CategoryAInterface1",
        "kind": 256,
        "path": "has-categories/interfaces/CategoryAInterface1.md"
      },
      {
        "title": "CategoryAInterface2",
        "kind": 256,
        "path": "has-categories/interfaces/CategoryAInterface2.md"
      },
      {
        "title": "CategoryBInterface1",
        "kind": 256,
        "path": "has-categories/interfaces/CategoryBInterface1.md"
      },
      {
        "title": "CategoryBInterface2",
        "kind": 256,
        "path": "has-categories/interfaces/CategoryBInterface2.md"
      },
      {
        "title": "UnCategorizedInterace",
        "kind": 256,
        "path": "has-categories/interfaces/UnCategorizedInterace.md"
      }
    ]
  },
  {
    "title": "has-custom-groups",
    "kind": 2,
    "path": "has-custom-groups/index.md",
    "children": [
      {
        "title": "variabelA",
        "kind": 32,
        "path": "has-custom-groups/variables/variabelA.md"
      },
      {
        "title": "variableB1",
        "kind": 32,
        "path": "has-custom-groups/variables/variableB1.md"
      },
      {
        "title": "variableB2",
        "kind": 32,
        "path": "has-custom-groups/variables/variableB2.md"
      },
      {
        "title": "variableC",
        "kind": 32,
        "path": "has-custom-groups/variables/variableC.md"
      }
    ]
  },
  {
    "title": "has-namespaces",
    "kind": 2,
    "path": "has-namespaces/index.md",
    "children": [
      {
        "title": "NamespaceB",
        "kind": 4,
        "path": "has-namespaces/namespaces/NamespaceB/index.md"
      },
      {
        "title": "_Namespace_A_",
        "kind": 4,
        "path": "has-namespaces/namespaces/Namespace_A/index.md",
        "children": [
          {
            "title": "NestedNamespace",
            "kind": 4,
            "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
            "children": [
              {
                "title": "NamespaceInterface",
                "kind": 256,
                "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md"
              }
            ]
          },
          {
            "title": "NamespaceInterface",
            "kind": 256,
            "path": "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md"
          }
        ]
      },
      {
        "title": "EnumB",
        "kind": 8,
        "path": "has-namespaces/enumerations/EnumB.md"
      },
      {
        "title": "_Enum_A_",
        "kind": 8,
        "path": "has-namespaces/enumerations/Enum_A.md"
      },
      {
        "title": "ClassB",
        "kind": 128,
        "path": "has-namespaces/classes/ClassB.md"
      },
      {
        "title": "__Class_A_",
        "kind": 128,
        "path": "has-namespaces/classes/Class_A.md"
      },
      {
        "title": "InterfaceB",
        "kind": 256,
        "path": "has-namespaces/interfaces/InterfaceB.md"
      },
      {
        "title": "_Interface_A_",
        "kind": 256,
        "path": "has-namespaces/interfaces/Interface_A.md"
      },
      {
        "title": "TypeB",
        "kind": 2097152,
        "path": "has-namespaces/type-aliases/TypeB.md"
      },
      {
        "title": "_Type_A_",
        "kind": 2097152,
        "path": "has-namespaces/type-aliases/Type_A.md"
      },
      {
        "title": "_variable_A_",
        "kind": 32,
        "path": "has-namespaces/variables/variable_A.md"
      },
      {
        "title": "variableB",
        "kind": 32,
        "path": "has-namespaces/variables/variableB.md"
      },
      {
        "title": "_function_A_",
        "kind": 64,
        "path": "has-namespaces/functions/function_A.md"
      },
      {
        "title": "functionB",
        "kind": 64,
        "path": "has-namespaces/functions/functionB.md"
      }
    ]
  },
  {
    "title": "has-references",
    "kind": 2,
    "path": "has-references/index.md",
    "children": [
      {
        "title": "defaultFunction",
        "kind": 64,
        "path": "has-references/functions/defaultFunction.md"
      }
    ]
  },
  {
    "title": "has-same-exports",
    "kind": 2,
    "path": "has-same-exports/index.md",
    "children": [
      {
        "title": "SomeClass",
        "kind": 128,
        "path": "has-same-exports/classes/SomeClass.md"
      },
      {
        "title": "someClass",
        "kind": 128,
        "path": "has-same-exports/classes/someClass-1.md"
      }
    ]
  },
  {
    "title": "index",
    "kind": 2,
    "path": "index/index.md",
    "children": [
      {
        "title": "SomeClass",
        "kind": 128,
        "path": "index/classes/SomeClass.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "42-module-name",
    "kind": 2,
    "path": "42-module-name/index.md"
  },
  {
    "title": "<internal>",
    "kind": 2,
    "path": "-internal-/index.md"
  },
  {
    "title": "basic",
    "kind": 2,
    "path": "basic/index.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "kind": 8,
            "path": "basic/enumerations/EnumA.md"
          },
          {
            "title": "EnumB",
            "kind": 8,
            "path": "basic/enumerations/EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "kind": 128,
            "path": "basic/classes/ClassA.md"
          },
          {
            "title": "ClassB",
            "kind": 128,
            "path": "basic/classes/ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "kind": 256,
            "path": "basic/interfaces/InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "basic/interfaces/InterfaceB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-categories",
    "kind": 2,
    "path": "has-categories/index.md",
    "children": [
      {
        "title": "Category A",
        "children": [
          {
            "title": "CategoryAEnum1",
            "kind": 8,
            "url": "has-categories/enumerations/CategoryAEnum1.md"
          },
          {
            "title": "CategoryAEnum2",
            "kind": 8,
            "url": "has-categories/enumerations/CategoryAEnum2.md"
          },
          {
            "title": "CategoryAInterface1",
            "kind": 256,
            "url": "has-categories/interfaces/CategoryAInterface1.md"
          },
          {
            "title": "CategoryAInterface2",
            "kind": 256,
            "url": "has-categories/interfaces/CategoryAInterface2.md"
          }
        ]
      },
      {
        "title": "Category B",
        "children": [
          {
            "title": "CategoryBEnum1",
            "kind": 8,
            "url": "has-categories/enumerations/CategoryBEnum1.md"
          },
          {
            "title": "CategoryBEnum2",
            "kind": 8,
            "url": "has-categories/enumerations/CategoryBEnum2.md"
          },
          {
            "title": "CategoryBInterface1",
            "kind": 256,
            "url": "has-categories/interfaces/CategoryBInterface1.md"
          },
          {
            "title": "CategoryBInterface2",
            "kind": 256,
            "url": "has-categories/interfaces/CategoryBInterface2.md"
          }
        ]
      },
      {
        "title": "Other",
        "children": [
          {
            "title": "UnCategorizedEnum",
            "kind": 8,
            "url": "has-categories/enumerations/UnCategorizedEnum.md"
          },
          {
            "title": "UnCategorizedInterace",
            "kind": 256,
            "url": "has-categories/interfaces/UnCategorizedInterace.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-custom-groups",
    "kind": 2,
    "path": "has-custom-groups/index.md"
  },
  {
    "title": "has-namespaces",
    "kind": 2,
    "path": "has-namespaces/index.md",
    "children": [
      {
        "title": "Namespaces",
        "children": [
          {
            "title": "NamespaceB",
            "kind": 4,
            "path": "has-namespaces/namespaces/NamespaceB/index.md"
          },
          {
            "title": "_Namespace_A_",
            "kind": 4,
            "path": "has-namespaces/namespaces/Namespace_A/index.md",
            "children": [
              {
                "title": "Namespaces",
                "children": [
                  {
                    "title": "NestedNamespace",
                    "kind": 4,
                    "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
                    "children": [
                      {
                        "title": "Interfaces",
                        "children": [
                          {
                            "title": "NamespaceInterface",
                            "kind": 256,
                            "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md"
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "NamespaceInterface",
                    "kind": 256,
                    "path": "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md"
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumB",
            "kind": 8,
            "path": "has-namespaces/enumerations/EnumB.md"
          },
          {
            "title": "_Enum_A_",
            "kind": 8,
            "path": "has-namespaces/enumerations/Enum_A.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassB",
            "kind": 128,
            "path": "has-namespaces/classes/ClassB.md"
          },
          {
            "title": "__Class_A_",
            "kind": 128,
            "path": "has-namespaces/classes/Class_A.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceB",
            "kind": 256,
            "path": "has-namespaces/interfaces/InterfaceB.md"
          },
          {
            "title": "_Interface_A_",
            "kind": 256,
            "path": "has-namespaces/interfaces/Interface_A.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "kind": 2,
    "path": "has-references/index.md"
  },
  {
    "title": "has-same-exports",
    "kind": 2,
    "path": "has-same-exports/index.md",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "SomeClass",
            "kind": 128,
            "path": "has-same-exports/classes/SomeClass.md"
          },
          {
            "title": "someClass",
            "kind": 128,
            "path": "has-same-exports/classes/someClass-1.md"
          }
        ]
      }
    ]
  },
  {
    "title": "index",
    "kind": 2,
    "path": "index/index.md",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "SomeClass",
            "kind": 128,
            "path": "index/classes/SomeClass.md"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "42-module-name",
    "kind": 2,
    "path": "42-module-name.md"
  },
  {
    "title": "<internal>",
    "kind": 2,
    "path": "-internal-.md"
  },
  {
    "title": "basic",
    "kind": 2,
    "path": "basic.md"
  },
  {
    "title": "has-categories",
    "kind": 2,
    "path": "has-categories.md"
  },
  {
    "title": "has-custom-groups",
    "kind": 2,
    "path": "has-custom-groups.md"
  },
  {
    "title": "has-namespaces",
    "kind": 2,
    "path": "has-namespaces/index.md",
    "children": [
      {
        "title": "NamespaceB",
        "kind": 4,
        "path": "has-namespaces/namespaces/NamespaceB.md"
      },
      {
        "title": "_Namespace_A_",
        "kind": 4,
        "path": "has-namespaces/namespaces/Namespace_A/index.md",
        "children": [
          {
            "title": "NestedNamespace",
            "kind": 4,
            "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "kind": 2,
    "path": "has-references.md"
  },
  {
    "title": "has-same-exports",
    "kind": 2,
    "path": "has-same-exports.md"
  },
  {
    "title": "index",
    "kind": 2,
    "path": "module_index.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "42-module-name",
    "kind": 2,
    "path": "42-module-name.md"
  },
  {
    "title": "<internal>",
    "kind": 2,
    "path": "-internal-.md"
  },
  {
    "title": "basic",
    "kind": 2,
    "path": "basic.md"
  },
  {
    "title": "has-categories",
    "kind": 2,
    "path": "has-categories.md",
    "children": []
  },
  {
    "title": "has-custom-groups",
    "kind": 2,
    "path": "has-custom-groups.md"
  },
  {
    "title": "has-namespaces",
    "kind": 2,
    "path": "has-namespaces/index.md",
    "children": [
      {
        "title": "Namespaces",
        "children": [
          {
            "title": "NamespaceB",
            "kind": 4,
            "path": "has-namespaces/namespaces/NamespaceB.md"
          },
          {
            "title": "_Namespace_A_",
            "kind": 4,
            "path": "has-namespaces/namespaces/Namespace_A/index.md",
            "children": [
              {
                "title": "Namespaces",
                "children": [
                  {
                    "title": "NestedNamespace",
                    "kind": 4,
                    "path": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "kind": 2,
    "path": "has-references.md"
  },
  {
    "title": "has-same-exports",
    "kind": 2,
    "path": "has-same-exports.md"
  },
  {
    "title": "index",
    "kind": 2,
    "path": "module_index.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for single entry point: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "Enumerations",
    "children": [
      {
        "title": "BasicEnum",
        "kind": 8,
        "path": "enumerations/BasicEnum.md"
      },
      {
        "title": "EnumWithValues",
        "kind": 8,
        "path": "enumerations/EnumWithValues.md"
      }
    ]
  },
  {
    "title": "Classes",
    "children": [
      {
        "title": "AbstractClass",
        "kind": 128,
        "path": "classes/AbstractClass.md"
      },
      {
        "title": "BasicClass",
        "kind": 128,
        "path": "classes/BasicClass.md"
      },
      {
        "title": "CallbacksOptions",
        "kind": 128,
        "path": "classes/CallbacksOptions.md"
      },
      {
        "title": "ClassWithAccessors",
        "kind": 128,
        "path": "classes/ClassWithAccessors.md"
      },
      {
        "title": "ClassWithComplexProps",
        "kind": 128,
        "path": "classes/ClassWithComplexProps.md"
      },
      {
        "title": "ClassWithConstructorOverloads",
        "kind": 128,
        "path": "classes/ClassWithConstructorOverloads.md"
      },
      {
        "title": "ClassWithFlags",
        "kind": 128,
        "path": "classes/ClassWithFlags.md"
      },
      {
        "title": "ClassWithModifiers",
        "kind": 128,
        "path": "classes/ClassWithModifiers.md"
      },
      {
        "title": "ClassWithSimpleProps",
        "kind": 128,
        "path": "classes/ClassWithSimpleProps.md"
      },
      {
        "title": "ClassWithTypeParameters",
        "kind": 128,
        "path": "classes/ClassWithTypeParameters.md"
      },
      {
        "title": "DerivedClassA",
        "kind": 128,
        "path": "classes/DerivedClassA.md"
      },
      {
        "title": "DerivedClassB",
        "kind": 128,
        "path": "classes/DerivedClassB.md"
      },
      {
        "title": "DisposableClass",
        "kind": 128,
        "path": "classes/DisposableClass.md"
      }
    ]
  },
  {
    "title": "Interfaces",
    "children": [
      {
        "title": "BasicInterface",
        "kind": 256,
        "path": "interfaces/BasicInterface.md"
      },
      {
        "title": "CustomEventInterface",
        "kind": 256,
        "path": "interfaces/CustomEventInterface.md"
      },
      {
        "title": "ExtendedInterface",
        "kind": 256,
        "path": "interfaces/ExtendedInterface.md"
      },
      {
        "title": "IndexableInterface",
        "kind": 256,
        "path": "interfaces/IndexableInterface.md"
      },
      {
        "title": "InterfaceWithEventProperties",
        "kind": 256,
        "path": "interfaces/InterfaceWithEventProperties.md"
      },
      {
        "title": "InterfaceWithFlags",
        "kind": 256,
        "path": "interfaces/InterfaceWithFlags.md"
      },
      {
        "title": "InterfaceWithTypeParameters",
        "kind": 256,
        "path": "interfaces/InterfaceWithTypeParameters.md"
      }
    ]
  },
  {
    "title": "Type Aliases",
    "children": [
      {
        "title": "ArrayOfStuff",
        "kind": 2097152,
        "path": "type-aliases/ArrayOfStuff.md"
      },
      {
        "title": "ArrayType",
        "kind": 2097152,
        "path": "type-aliases/ArrayType.md"
      },
      {
        "title": "ConditionalType",
        "kind": 2097152,
        "path": "type-aliases/ConditionalType.md"
      },
      {
        "title": "ExternalReferenceType",
        "kind": 2097152,
        "path": "type-aliases/ExternalReferenceType.md"
      },
      {
        "title": "FunctionType",
        "kind": 2097152,
        "path": "type-aliases/FunctionType.md"
      },
      {
        "title": "IndexAccessType",
        "kind": 2097152,
        "path": "type-aliases/IndexAccessType.md"
      },
      {
        "title": "IntersectionType",
        "kind": 2097152,
        "path": "type-aliases/IntersectionType.md"
      },
      {
        "title": "LiteralType",
        "kind": 2097152,
        "path": "type-aliases/LiteralType.md"
      },
      {
        "title": "PartialMappedType",
        "kind": 2097152,
        "path": "type-aliases/PartialMappedType.md"
      },
      {
        "title": "PrimitiveType",
        "kind": 2097152,
        "path": "type-aliases/PrimitiveType.md"
      },
      {
        "title": "PromiseTypeWithObject",
        "kind": 2097152,
        "path": "type-aliases/PromiseTypeWithObject.md"
      },
      {
        "title": "PromiseTypeWithSymbol",
        "kind": 2097152,
        "path": "type-aliases/PromiseTypeWithSymbol.md"
      },
      {
        "title": "QueryType",
        "kind": 2097152,
        "path": "type-aliases/QueryType.md"
      },
      {
        "title": "ReadonlyMappedType",
        "kind": 2097152,
        "path": "type-aliases/ReadonlyMappedType.md"
      },
      {
        "title": "StringLiteralType",
        "kind": 2097152,
        "path": "type-aliases/StringLiteralType.md"
      },
      {
        "title": "TupleType",
        "kind": 2097152,
        "path": "type-aliases/TupleType.md"
      },
      {
        "title": "TypeWithExternalSymbolLinkMapping",
        "kind": 2097152,
        "path": "type-aliases/TypeWithExternalSymbolLinkMapping.md"
      },
      {
        "title": "TypeWithTypeParams",
        "kind": 2097152,
        "path": "type-aliases/TypeWithTypeParams.md"
      },
      {
        "title": "UnionType",
        "kind": 2097152,
        "path": "type-aliases/UnionType.md"
      },
      {
        "title": "UnionTypeWithTemplateStrings",
        "kind": 2097152,
        "path": "type-aliases/UnionTypeWithTemplateStrings.md"
      },
      {
        "title": "__TypeDeclarationWithSpecialCharacters_",
        "kind": 2097152,
        "path": "type-aliases/TypeDeclarationWithSpecialCharacters.md"
      }
    ]
  },
  {
    "title": "Variables",
    "children": [
      {
        "title": "objectLiteralVariable",
        "kind": 32,
        "path": "variables/objectLiteralVariable.md"
      },
      {
        "title": "objectWithSymbol",
        "kind": 32,
        "path": "variables/objectWithSymbol.md"
      },
      {
        "title": "someQuery",
        "kind": 32,
        "path": "variables/someQuery.md"
      },
      {
        "title": "stringVariable",
        "kind": 32,
        "path": "variables/stringVariable.md"
      },
      {
        "title": "typeOperatorVariable",
        "kind": 32,
        "path": "variables/typeOperatorVariable.md"
      }
    ]
  },
  {
    "title": "Functions",
    "children": [
      {
        "title": "basicFunction",
        "kind": 64,
        "path": "functions/basicFunction.md"
      },
      {
        "title": "functionReturningAFunction",
        "kind": 64,
        "path": "functions/functionReturningAFunction.md"
      },
      {
        "title": "functionReturningAPromise",
        "kind": 64,
        "path": "functions/functionReturningAPromise.md"
      },
      {
        "title": "functionReturningAString",
        "kind": 64,
        "path": "functions/functionReturningAString.md"
      },
      {
        "title": "functionReturningAUnionType",
        "kind": 64,
        "path": "functions/functionReturningAUnionType.md"
      },
      {
        "title": "functionReturningAnObject",
        "kind": 64,
        "path": "functions/functionReturningAnObject.md"
      },
      {
        "title": "functionWithComplexParams",
        "kind": 64,
        "path": "functions/functionWithComplexParams.md"
      },
      {
        "title": "functionWithDefaultParameters",
        "kind": 64,
        "path": "functions/functionWithDefaultParameters.md"
      },
      {
        "title": "functionWithMultipleSignatures",
        "kind": 64,
        "path": "functions/functionWithMultipleSignatures.md"
      },
      {
        "title": "functionWithNamedParams",
        "kind": 64,
        "path": "functions/functionWithNamedParams.md"
      },
      {
        "title": "functionWithNestedParameters",
        "kind": 64,
        "path": "functions/functionWithNestedParameters.md"
      },
      {
        "title": "functionWithOptionalParameters",
        "kind": 64,
        "path": "functions/functionWithOptionalParameters.md"
      },
      {
        "title": "functionWithRestParams",
        "kind": 64,
        "path": "functions/functionWithRestParams.md"
      },
      {
        "title": "functionWithTypeParameters",
        "kind": 64,
        "path": "functions/functionWithTypeParameters.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for single entry point: (Output File Strategy "modules") (Option Group "1") 1`] = `"[]"`;
